DOC：v3.0 前沿架构升级方案 — 云原生全栈技术栈
- Java 21 Virtual Threads + Pattern Matching + GraalVM Native Image
- Nuxt 3 SSR/SSG + UnoCSS + TanStack Query
- Redis 分布式限流 + Flyway 数据库迁移
- GraphQL + OAuth2 + TOTP MFA 多因素认证
- Micrometer + OpenTelemetry + Grafana 可观测性栈
- Testcontainers + Playwright + PIT 测试体系
- Docker 多阶段构建 + K8s + GitHub Actions CI/CD
- RabbitMQ 异步事件驱动 + XXL-Job 定时任务

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>